--- a/dev-resources/todo.txt
+++ b/dev-resources/todo.txt
@@ -1,9 +1,13 @@
+All Pages:
+check footer size to be accurate
+
 Product Page:
-fix large footer on product page
-see if you can put shopify button in its own script and import it to save space in html
-figure out how to move add to cart button to the right of price
-set font family and size on product page
-add descriptioon section to product page
+add description section to product page
 
 Home Page:
 add link to mcr002 on merch page
+get product images on home page merch section to load from shopify
+
+Responsive Design:
+learn how to view live server on mobile and laptop
+make header smaller on mobile
