--- a/dev-resources/todo.txt
+++ b/dev-resources/todo.txt
@@ -6,7 +6,10 @@ add link to mcr002 on merch page
 get product images on home page merch section to load from shopify
 
 Product Page:
+fix button style and font
+increase carousel size
 add description section to product page
+check on sku number formatting (mcr002 or mcr-002)
 add drop-down menu to link to other versions of product
 
 Responsive Design:
