--- a/dev-resources/todo.txt
+++ b/dev-resources/todo.txt
@@ -1,13 +1,11 @@
+-- URGENT WORK --
 General:
 learn how to view live server on mobile and laptop  S
-how do the shopify product ids and div ids work? Where can i easily find them from shopify? S
 move to custom domain   M
-how to make pages load more gracefully? M
 
 Home Page:
 get latest release image in a general location  S
 implement responsive design L
-workaround for video autoplay for firefox M
 
 Store Page:
 implement responsive design L
@@ -17,6 +15,49 @@ fix add to cart button shrinking M
 implement responsive design L
 create pages for other products based off finished first product L
 
+About Page:
+fix html layout to resemble figma better M
+get image for MCR about S
+get descriptioon for MCR about S
+implement responsive design L
+
+Cart:
+get cart inventory to be on every page
+
+Header:
+remove artists from all pages s
+adjust header height based on media queries M
+add script back for mobile hamburger menu M
+implement responsive design L
+
+Footer:
+remove artists from all pages s
+implement responsive design L
+
+
+
+
+-- OPTIONAL WORK --
+General:
+how do the shopify product ids and div ids work? Where can i easily find them from shopify? S
+how to make pages load more gracefully? M
+
+Home Page:
+get cover for hero video
+workaround for video autoplay for firefox M
+
+Product Page:
+create a pre-order button M
+
+
+
+
+-- LATER WORK --
+Cart:
+add cart page L
+customize cart sidebar styling L
+add badge icon to cart in header L
+
 Artist Page:
 fix artist boxes to look like figma M
 get images for all artists S
@@ -25,23 +66,3 @@ Cryhard Page:
 implement responsive design L
 add "listen now" feature L
 create artist pages for other artists based off finished cryhard page L
-
-About Page:
-fix html layout to resemble figma better M
-get image for MCR about S
-get descriptioon for MCR about S
-implement responsive design L
-
-Cart:
-add cart page L
-customize cart sidebar styling L
-add badge icon to cart in header L
-
-Header:
-adjust header height based on viewport M
-get rainbow underline to stretch full length of header S
-add script back for mobile hamburger menu M
-implement responsive design L
-
-Footer:
-implement responsive design L
