--- a/dev-resources/todo.txt
+++ b/dev-resources/todo.txt
@@ -1,6 +1,6 @@
 -- URGENT WORK --
 Product Page:
-fix add to cart button shrinking M
+fix add to cart button M
 implement responsive design L
 create pages for other products based off finished first product L
 
