--- a/dev-resources/todo.txt
+++ b/dev-resources/todo.txt
@@ -30,7 +30,7 @@ force video to load before page S
 
 Product Page:
 create a pre-order button M
-add max size to remmonded merch blocks
+center product images in product section M
 
 
 
